2006-01-16  Ankit Jain  <jankit@novell.com>

	* gen-type.cs: New test case for handling a MemberRef with
	a TypeSpec parent.

2005-11-23  Ankit Jain  <jankit@novell.com>

	* gen-cattr.cs: New test case for custom attributes on
	type parameters.

2005-11-15  Ankit Jain  <jankit@novell.com>

	* test1.cs, test2.cs, test3.cs: New test cases for Bug #76671.

2005-11-08  Ankit Jain  <jankit@novell.com>

	* gen-dump-table.cs: New test case (for r52695).

2005-10-28  Ankit Jain  <jankit@novell.com>

	* gen-prop.cs: New test case (for r52316).