@@ -1,3 +1,8 @@
+2006-01-25  Ankit Jain  <jankit@novell.com>
+
+	* ambiguous-gen-params.il: New test case for type/method with 
+	ambiguous generic parameters.
+
 2006-01-16  Ankit Jain  <jankit@novell.com>
 
 	* gen-type.cs: New test case for handling a MemberRef with
